# abac-platform

./: .gitignore  Makefile  OPS.md  README.md
admin-api/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
admin-api/src/: app.module.ts  main.ts
admin-api/src/api/: audit.controller.ts  entities.controller.ts  policies.controller.ts  policy-sets.controller.ts  tenants.controller.ts
admin-api/src/auth/: auth.module.ts  jwt.strategy.ts  roles.decorator.ts  roles.guard.ts
admin-api/src/common/: fastify-helmet.ts  pagination.ts  tenant.interceptor.ts  zod-pipe.ts
admin-api/src/config/: config.module.ts  config.service.ts
admin-api/src/db/: db.module.ts  typeorm.config.ts
admin-api/src/infra/: _bind.ts
admin-ui/: .env.example  README.md  abac-realm.json  package-lock.json  package.json  tailwind.config.cjs
admin-ui/src/components/: AppShell.tsx  AuditTable.tsx  AuthGuard.tsx  CedarEditor.tsx  DashboardOverview.tsx  EntityForm.tsx  Header.tsx  PolicyDraftProvider.tsx  PolicySetDraftClient.tsx  PolicySetList.tsx  PolicyTestForm.tsx  PromoteDialog.tsx  QueryProvider.tsx  TenantList.tsx
admin-ui/src/layouts/: Layout.astro
admin-ui/src/lib/: api.ts  auth.ts  tenant-selection.ts
db/migrations/: 0001_init.sql  0002_schema.sql
examples/app/: package-lock.json  server.js
infra/: alerts.yml  docker-compose.yml  envoy.yaml
k6/: authz_smoke.js
keycloak/realm-export/: abac-realm.json
pdp/: Cargo.toml  Dockerfile  OPS.md  README.md
pdp/src/: main.rs
proto/: authz.proto
scripts/: mint_jwt_hs256.sh
(+41 files in other folders)
